Refactoring fuction scalar_product and vector_product and add num_tries

--- a/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
+++ b/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,110 +9,121 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Import potřebných balíčků"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T13:57:15.993321300Z",
-     "start_time": "2023-05-14T13:57:15.798366900Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import sympy as sp\n",
-    "import scipy as sc\n",
-    "import numba as nb\n",
-    "from timeit import default_timer as timer"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-23T22:09:54.245737700Z",
+     "start_time": "2023-05-23T22:09:54.238618100Z"
+    },
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "import scipy as sc\n",
+    "import numba as nb\n",
+    "import numpy as np\n",
+    "from timeit import default_timer as timer\n",
+    "import sys"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Skalární součin\n",
     "### Změříme čas výpočtu skalárního součinu vektorů pomocí čístého pythonu a pomocí numpy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-23T22:41:46.730608300Z",
+     "start_time": "2023-05-23T22:41:46.552357700Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Čas potřebný pro výpočet pomocí čístého pythonu: 0.0007953000022098422\n",
-      "Čas potřebný pro výpočet pomocí numpy: 0.0007437000167556107\n"
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech čistý python: 1.3365522988606244 ms\n",
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech numpy: 0.009629701962694526 ms\n"
      ]
     }
    ],
    "source": [
-    "# skalární součin pomocí čistého pythonu\n",
-    "def scalar_product_python(x, y):\n",
-    "    result = x @ y\n",
-    "    return result\n",
+    "# Implement a function to calculate the scalar product of two vectors from scratch\n",
+    "def scalar_product(v1, v2):\n",
+    "    return sum([v1[i] * v2[i] for i in range(len(v1))])\n",
     "\n",
-    "# skalární součin pomocí numpy\n",
-    "def scalar_product_numpy(x, y):\n",
-    "    return np.dot(x, y)\n",
+    "# Implement a function to calculate the scalar product of two vectors using numpy\n",
+    "def np_scalar_product(v1, v2):\n",
+    "    return np.dot(v1, v2)\n",
     "\n",
-    "# vytvoříme náhodné vektory\n",
-    "x = np.random.rand(1000000)\n",
-    "y = np.random.rand(1000000)\n",
+    "# Time the execution of both functions for multiple iterations\n",
+    "num_tries = 1000\n",
+    "times1 = []\n",
+    "times2 = []\n",
     "\n",
-    "# změříme čas výpočtu pomocí čistého pythonu\n",
-    "start = timer()\n",
-    "scalar_product_python(x, y)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí čístého pythonu: {end - start}\")\n",
+    "for i in range(num_tries):\n",
+    "    vector1 = np.random.randint(1, 10, size=10000)\n",
+    "    vector2 = np.random.randint(1, 10, size=10000)\n",
+    "    start_time = timer()\n",
+    "    result1 = scalar_product(vector1, vector2)\n",
+    "    end_time = timer()\n",
+    "    times1.append(end_time - start_time)\n",
     "\n",
-    "# změříme čas výpočtu pomocí numpy\n",
-    "start = timer()\n",
-    "scalar_product_numpy(x, y)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí numpy: {end - start}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:23:26.927219100Z",
-     "start_time": "2023-05-14T14:23:26.899247800Z"
-    }
-   }
+    "    start_time = timer()\n",
+    "    result2 = np_scalar_product(vector1, vector2)\n",
+    "    end_time = timer()\n",
+    "    times2.append(end_time - start_time)\n",
+    "\n",
+    "# Calculate the average time for each function\n",
+    "avg_time1 = sum(times1) / num_tries\n",
+    "avg_time2 = sum(times2) / num_tries\n",
+    "\n",
+    "print(f\"Průměrný čas pro výpočet skalárního součinu v {num_tries} pokusech čistý python: {avg_time1 * 1000} ms\")\n",
+    "print(f\"Průměrný čas pro výpočet skalárního součinu v {num_tries} pokusech numpy: {avg_time2 * 1000} ms\")"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Vektorový součin\n",
     "### Změříme čas výpočtu vektorového součinu vektorů pomocí čístého pythonu a pomocí numpy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-23T22:41:39.923505100Z",
+     "start_time": "2023-05-23T22:41:39.918975100Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Čas potřebný pro výpočet pomocí čístého pythonu: 3.119994653388858e-05\n",
-      "Čas potřebný pro výpočet pomocí numpy: 0.00010260002454742789\n"
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.0014435008633881807 ms\n",
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.020913995103910565 ms\n"
      ]
     }
    ],
@@ -126,112 +138,137 @@
     "\n",
     "# vektorový součin pomocí numpy\n",
     "def vector_product_numpy(x, y):\n",
-    "    return np.cross(x, y)\n",
+    "    result = np.cross(x, y)\n",
+    "    return result\n",
     "\n",
     "# vytvoříme náhodné vektory\n",
-    "x = np.random.rand(3)\n",
-    "y = np.random.rand(3)\n",
     "\n",
-    "# změříme čas výpočtu pomocí čistého pythonu\n",
-    "start = timer()\n",
-    "vector_product_python(x, y)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí čístého pythonu: {end - start}\")\n",
+    "num_tries = 1000\n",
+    "times1 = []\n",
+    "times2 = []\n",
     "\n",
-    "# změříme čas výpočtu pomocí numpy\n",
-    "start = timer()\n",
-    "vector_product_numpy(x, y)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí numpy: {end - start}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:09:42.758755900Z",
-     "start_time": "2023-05-14T14:09:42.750744600Z"
-    }
-   }
+    "for i in range(num_tries):\n",
+    "    vector1 = np.random.randint(1, 10, size=3)\n",
+    "    vector2 = np.random.randint(1, 10, size=3)\n",
+    "    start_time = timer()\n",
+    "    result1 = vector_product_python(vector1, vector2)\n",
+    "    end_time = timer()\n",
+    "    times1.append(end_time - start_time)\n",
+    "\n",
+    "    start_time = timer()\n",
+    "    result2 = vector_product_numpy(vector1, vector2)\n",
+    "    end_time = timer()\n",
+    "    times2.append(end_time - start_time)\n",
+    "\n",
+    "avg_time1 = sum(times1) / num_tries\n",
+    "avg_time2 = sum(times2) / num_tries\n",
+    "\n",
+    "print(f\"Průměrný čas pro výpočet vektorového součinu v {num_tries} pokusech čistý python: {avg_time1 * 1000} ms\")\n",
+    "\n",
+    "print(f\"Průměrný čas pro výpočet vektorového součinu v {num_tries} pokusech čistý python: {avg_time2 * 1000} ms\")\n"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Určitý integrál\n",
     "### Změříme čas výpočtu určitého integrálu pomocí čístého pythonu a pomocí scipy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-23T22:27:04.622113900Z",
+     "start_time": "2023-05-23T22:27:03.526737500Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Čas potřebný pro výpočet pomocí čístého pythonu: 1.057381400023587\n",
-      "Čas potřebný pro výpočet pomocí scipy: 0.0005796000477857888\n"
+      "Průměrný čas pro výpočet určitého integrálu v čístem pythonu: 1.5223367994185537 ms, při 1000 pokusech\n",
+      "Průměrný čas pro výpočet určitého integrálu pomocí numpy: 0.03352749184705317 ms, při 1000 pokusech\n"
      ]
     }
    ],
    "source": [
-    "# určitý integrál pomocí čistého pythonu\n",
-    "def definite_integral_python(f, a, b, n):\n",
-    "    result = 0\n",
+    "# Definice funkce pro integraci\n",
+    "def f(x):\n",
+    "    return sc.stats.uniform.rvs(loc=0, scale=1) * x**2\n",
+    "\n",
+    "# Výpočet určitého integrálu f(x) z bodu a do bodu b pomocí čistého jazyka Python\n",
+    "def definite_integral_python(f, a, b, n=100):\n",
     "    dx = (b - a) / n\n",
+    "    result = 0\n",
     "    for i in range(n):\n",
-    "        result += f(a + i * dx) * dx\n",
+    "        x = a + i * dx\n",
+    "        result += f(x) * dx\n",
     "    return result\n",
     "\n",
-    "# určitý integrál pomocí scipy\n",
-    "def definite_integral_scipy(f, a, b, n):\n",
-    "    return sc.integrate.quad(f, a, b)[0]\n",
+    "# Výpočet určitého integrálu f(x) z bodu a do bodu b pomocí scipy.integrate.quad\n",
+    "def definite_integral_scipy(f, a, b):\n",
+    "    result, error = sc.integrate.fixed_quad(f, a, b, n=5)\n",
+    "    return result\n",
     "\n",
-    "# vytvoříme náhodnou funkci\n",
-    "x = sp.symbols('x')\n",
-    "f = sp.sin(x) * sp.exp(x)\n",
+    "# Čas provedení obou funkcí na 1000 pokusů\n",
+    "num_tries = 1000\n",
+    "times1 = []\n",
+    "times2 = []\n",
     "\n",
-    "# změříme čas výpočtu pomocí čistého pythonu\n",
-    "start = timer()\n",
-    "definite_integral_python(sp.lambdify(x, f), 0, 1, 1000000)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí čístého pythonu: {end - start}\")\n",
+    "for i in range(num_tries):\n",
+    "    f = lambda x: sc.stats.uniform.rvs(loc=0, scale=1) * x**2\n",
+    "    a = sc.stats.uniform.rvs(loc=0, scale=1)\n",
+    "    b = sc.stats.uniform.rvs(loc=0, scale=1)\n",
+    "    start_time = timer()\n",
+    "    result1 = definite_integral_python(f, a, b)\n",
+    "    end_time = timer()\n",
+    "    times1.append(end_time - start_time)\n",
     "\n",
-    "# změříme čas výpočtu pomocí scipy\n",
-    "start = timer()\n",
-    "definite_integral_scipy(sp.lambdify(x, f), 0, 1, 1000000)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí scipy: {end - start}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:11:31.599561800Z",
-     "start_time": "2023-05-14T14:11:30.550190400Z"
-    }
-   }
+    "    start_time = timer()\n",
+    "    result2 = definite_integral_scipy(f, a, b)\n",
+    "    end_time = timer()\n",
+    "    times2.append(end_time - start_time)\n",
+    "\n",
+    "# Výpočet průměrného času pro každou funkci\n",
+    "avg_time1 = sum(times1) / num_tries\n",
+    "avg_time2 = sum(times2) / num_tries\n",
+    "\n",
+    "print(f\"Průměrný čas pro výpočet určitého integrálu v čístem pythonu: {avg_time1 * 1000} ms, při {num_tries} pokusech\")\n",
+    "print(f\"Průměrný čas pro výpočet určitého integrálu pomocí numpy: {avg_time2 * 1000} ms, při {num_tries} pokusech\")"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Derivace\n",
     "### Změříme čas výpočtu derivace pomocí čístého pythonu a pomocí sympy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T14:13:57.410371300Z",
+     "start_time": "2023-05-14T14:13:57.403520700Z"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Čas potřebný pro výpočet pomocí čístého pythonu: 0.0013855999568477273\n",
-      "Čas potřebný pro výpočet pomocí sympy: 0.0002843000111170113\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -259,35 +296,35 @@
     "derivative_sympy(f, x)\n",
     "end = timer()\n",
     "print(f\"Čas potřebný pro výpočet pomocí sympy: {end - start}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:13:57.410371300Z",
-     "start_time": "2023-05-14T14:13:57.403520700Z"
-    }
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Faktoriál\n",
     "### Změříme čas výpočtu faktoriálu pomocí čístého pythonu a pomocí numpy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-14T14:18:06.251073800Z",
+     "start_time": "2023-05-14T14:18:06.245021900Z"
+    }
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Čas potřebný pro výpočet pomocí čístého pythonu: 0.00031670002499595284\n",
-      "Čas potřebný pro výpočet pomocí numpy: 9.789998875930905e-05\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -315,37 +352,33 @@
     "factorial_numpy(1000)\n",
     "end = timer()\n",
     "print(f\"Čas potřebný pro výpočet pomocí numpy: {end - start}\")\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:18:06.251073800Z",
-     "start_time": "2023-05-14T14:18:06.245021900Z"
-    }
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Determinant matice\n",
-    "### Změříme čas výpočtu determinantu matice pomocí čístého pythonu a pomocí numpy"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-14T14:35:22.351565900Z",
-     "start_time": "2023-05-14T14:35:22.348047Z"
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
-   }
+   ],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
