--- a/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
+++ b/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-23T22:09:54.245737700Z",
@@ -33,7 +33,8 @@
     "import numba as nb\n",
     "import numpy as np\n",
     "from timeit import default_timer as timer\n",
-    "import sys"
+    "import sys\n",
+    "from scipy.misc import derivative"
    ]
   },
   {
@@ -59,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech čistý python: 1.3365522988606244 ms\n",
-      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech numpy: 0.009629701962694526 ms\n"
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech čistý python: 1.5270688002929091 ms\n",
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech numpy: 0.00953029771335423 ms\n"
      ]
     }
    ],
@@ -122,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.0014435008633881807 ms\n",
-      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.020913995103910565 ms\n"
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.0014845968689769506 ms\n",
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.02268390078097582 ms\n"
      ]
     }
    ],
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-23T22:27:04.622113900Z",
@@ -191,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet určitého integrálu v čístem pythonu: 1.5223367994185537 ms, při 1000 pokusech\n",
-      "Průměrný čas pro výpočet určitého integrálu pomocí numpy: 0.03352749184705317 ms, při 1000 pokusech\n"
+      "Průměrný čas pro výpočet určitého integrálu v čístem pythonu: 1.704184704925865 ms, při 1000 pokusech\n",
+      "Průměrný čas pro výpočet určitého integrálu pomocí numpy: 0.04555249586701393 ms, při 1000 pokusech\n"
      ]
     }
    ],
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-14T14:13:57.410371300Z",
@@ -262,40 +263,35 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "module 'sympy' has no attribute 'derivative'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m     13\u001b[0m df_dx \u001b[39m=\u001b[39m derivative_python(f, x)\n\u001b[1;32m---> 14\u001b[0m df_dy \u001b[39m=\u001b[39m derivative_sympy(f, x) \n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDerivace funkce f(x) = x^2 v bodě x = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m pomocí čistého pythonu: \u001b[39m\u001b[39m{\u001b[39;00mdf_dx\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDerivace funkce f(x) = x^2 v bodě x = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m pomocí sympy: \u001b[39m\u001b[39m{\u001b[39;00mdf_dy\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[24], line 10\u001b[0m, in \u001b[0;36mderivative_sympy\u001b[1;34m(f, x)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mderivative_sympy\u001b[39m(f, x):\n\u001b[1;32m---> 10\u001b[0m     \u001b[39mreturn\u001b[39;00m sp\u001b[39m.\u001b[39;49mderivative(f, x)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'sympy' has no attribute 'derivative'"
      ]
     }
    ],
    "source": [
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
     "# derivace pomocí čistého pythonu\n",
-    "def derivative_python(f, x, dx):\n",
-    "    return (f(x + dx) - f(x)) / dx\n",
+    "def derivative_python(f, x, h=0.0001):\n",
+    "    return (f(x + h) - f(x - h)) / (2 * h)\n",
     "\n",
     "# derivace pomocí sympy\n",
     "def derivative_sympy(f, x):\n",
-    "    return sp.diff(f, x)\n",
+    "    return derivative(f, x)\n",
     "\n",
-    "# vytvoříme náhodnou funkci\n",
-    "x = sp.symbols('x')\n",
-    "f = sp.sin(x) * sp.exp(x)\n",
-    "\n",
-    "# změříme čas výpočtu pomocí čistého pythonu\n",
-    "start = timer()\n",
-    "derivative_python(sp.lambdify(x, f), 0, 0.0000001)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí čístého pythonu: {end - start}\")\n",
-    "\n",
-    "# změříme čas výpočtu pomocí sympy\n",
-    "start = timer()\n",
-    "derivative_sympy(f, x)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí sympy: {end - start}\")"
+    "x = 4\n",
+    "df_dx = derivative_python(f, x)\n",
+    "df_dy = derivative_sympy(f, x) \n",
+    "print(f\"Derivace funkce f(x) = x^2 v bodě x = {x} pomocí čistého pythonu: {df_dx}\")\n",
+    "print(f\"Derivace funkce f(x) = x^2 v bodě x = {x} pomocí sympy: {df_dy}\")"
    ]
   },
   {
@@ -309,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-14T14:18:06.251073800Z",
@@ -318,40 +314,52 @@
    },
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Průměrný čas výpočtu faktoriálu v čístem pythonu: 0.06755590019747615 ms v 1000 pokusech\n",
+      "Průměrný čas výpočtu faktoriálu pomocí numpy: 0.012694800971075892 ms v 1000 pokusech\n"
      ]
     }
    ],
    "source": [
     "# faktoriál pomocí čistého pythonu\n",
     "def factorial_python(n):\n",
-    "    if n == 0: return 1\n",
-    "    x = n\n",
-    "    for i in range(2, n):\n",
-    "        x *= i\n",
-    "    return x\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        result = 1\n",
+    "        for i in range(1, n+1):\n",
+    "            result *= i\n",
+    "        return result\n",
     "\n",
     "# faktoriál pomocí numpy\n",
     "def factorial_numpy(n):\n",
     "    return np.math.factorial(n)\n",
     "\n",
-    "# změříme čas výpočtu pomocí čistého pythonu\n",
-    "start = timer()\n",
-    "factorial_python(1000)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí čístého pythonu: {end - start}\")\n",
+    "num_tries = 1000\n",
+    "times1 = []\n",
+    "times2 = []\n",
     "\n",
-    "# změříme čas výpočtu pomocí numpy\n",
-    "start = timer()\n",
-    "factorial_numpy(1000)\n",
-    "end = timer()\n",
-    "print(f\"Čas potřebný pro výpočet pomocí numpy: {end - start}\")\n"
+    "# změříme čas výpočtu pomocí čistého pythonu\n",
+    "for i in range(num_tries):\n",
+    "    n = np.random.randint(1, 1000)\n",
+    "    start = timer()\n",
+    "    factorial_python(n)\n",
+    "    end = timer()\n",
+    "    times1.append(end - start)\n",
+    "\n",
+    "    # změříme čas výpočtu pomocí numpy\n",
+    "    start = timer()\n",
+    "    factorial_numpy(n)\n",
+    "    end = timer()\n",
+    "    times2.append(end - start)\n",
+    "\n",
+    "avg_time1 = sum(times1) / num_tries\n",
+    "avg_time2 = sum(times2) / num_tries\n",
+    "\n",
+    "print(f\"Průměrný čas výpočtu faktoriálu v čístem pythonu: {avg_time1 * 1000} ms v {num_tries} pokusech\")\n",
+    "print(f\"Průměrný čas výpočtu faktoriálu pomocí numpy: {avg_time2 * 1000} ms v {num_tries} pokusech\")\n"
    ]
   },
   {
@@ -364,18 +372,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mUnable to start Kernel 'venv (Python 3.11.1)' due to connection timeout. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n"
    ]
