First task done

--- a/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
+++ b/msw1/1.knihovny_a_moduly_pro_mat_vypocty.ipynb
@@ -18,13 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-23T22:09:54.245737700Z",
-     "start_time": "2023-05-23T22:09:54.238618100Z"
-    },
-    "collapsed": true
+    "is_executing": true
    },
    "outputs": [],
    "source": [
@@ -33,8 +29,7 @@
     "import numba as nb\n",
     "import numpy as np\n",
     "from timeit import default_timer as timer\n",
-    "import sys\n",
-    "from scipy.misc import derivative"
+    "import sys"
    ]
   },
   {
@@ -48,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-23T22:41:46.730608300Z",
-     "start_time": "2023-05-23T22:41:46.552357700Z"
+     "end_time": "2023-08-20T11:15:16.405142600Z",
+     "start_time": "2023-08-20T11:15:16.218854400Z"
     }
    },
    "outputs": [
@@ -60,21 +55,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech čistý python: 1.5270688002929091 ms\n",
-      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech numpy: 0.00953029771335423 ms\n"
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech čistý python: 3.1827245000049516 ms\n",
+      "Průměrný čas pro výpočet skalárního součinu v 1000 pokusech numpy: 0.0220121000038489 ms\n"
      ]
     }
    ],
    "source": [
-    "# Implement a function to calculate the scalar product of two vectors from scratch\n",
+    "# Fce pro výpočet skálárního součinu dvou vektorů pomocí čistého pythonu\n",
     "def scalar_product(v1, v2):\n",
     "    return sum([v1[i] * v2[i] for i in range(len(v1))])\n",
     "\n",
-    "# Implement a function to calculate the scalar product of two vectors using numpy\n",
+    "# Fce pro výpočet skálárního součinu dvou vektorů pomocí numpy\n",
     "def np_scalar_product(v1, v2):\n",
     "    return np.dot(v1, v2)\n",
     "\n",
-    "# Time the execution of both functions for multiple iterations\n",
+    "# Čas pro výpočet skalárního součinu vektorů pomocí čistého pythonu a pomocí numpy\n",
     "num_tries = 1000\n",
     "times1 = []\n",
     "times2 = []\n",
@@ -83,16 +78,16 @@
     "    vector1 = np.random.randint(1, 10, size=10000)\n",
     "    vector2 = np.random.randint(1, 10, size=10000)\n",
     "    start_time = timer()\n",
-    "    result1 = scalar_product(vector1, vector2)\n",
+    "    scalar_product(vector1, vector2)\n",
     "    end_time = timer()\n",
     "    times1.append(end_time - start_time)\n",
     "\n",
     "    start_time = timer()\n",
-    "    result2 = np_scalar_product(vector1, vector2)\n",
+    "    np_scalar_product(vector1, vector2)\n",
     "    end_time = timer()\n",
     "    times2.append(end_time - start_time)\n",
     "\n",
-    "# Calculate the average time for each function\n",
+    "# Výpočet průměrného času pro každou funkci\n",
     "avg_time1 = sum(times1) / num_tries\n",
     "avg_time2 = sum(times2) / num_tries\n",
     "\n",
@@ -101,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,11 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-23T22:41:39.923505100Z",
-     "start_time": "2023-05-23T22:41:39.918975100Z"
+     "end_time": "2023-08-20T11:25:44.300324200Z",
+     "start_time": "2023-08-20T11:25:44.270852200Z"
     }
    },
    "outputs": [
@@ -123,8 +117,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.0014845968689769506 ms\n",
-      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.02268390078097582 ms\n"
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech čistý python: 0.003869499997563253 ms\n",
+      "Průměrný čas pro výpočet vektorového součinu v 1000 pokusech numpy: 0.06526670000357626 ms\n"
      ]
     }
    ],
@@ -152,12 +146,12 @@
     "    vector1 = np.random.randint(1, 10, size=3)\n",
     "    vector2 = np.random.randint(1, 10, size=3)\n",
     "    start_time = timer()\n",
-    "    result1 = vector_product_python(vector1, vector2)\n",
+    "    vector_product_python(vector1, vector2)\n",
     "    end_time = timer()\n",
     "    times1.append(end_time - start_time)\n",
     "\n",
     "    start_time = timer()\n",
-    "    result2 = vector_product_numpy(vector1, vector2)\n",
+    "    vector_product_numpy(vector1, vector2)\n",
     "    end_time = timer()\n",
     "    times2.append(end_time - start_time)\n",
     "\n",
@@ -166,7 +160,7 @@
     "\n",
     "print(f\"Průměrný čas pro výpočet vektorového součinu v {num_tries} pokusech čistý python: {avg_time1 * 1000} ms\")\n",
     "\n",
-    "print(f\"Průměrný čas pro výpočet vektorového součinu v {num_tries} pokusech čistý python: {avg_time2 * 1000} ms\")\n"
+    "print(f\"Průměrný čas pro výpočet vektorového součinu v {num_tries} pokusech numpy: {avg_time2 * 1000} ms\")\n"
    ]
   },
   {
@@ -180,20 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-23T22:27:04.622113900Z",
-     "start_time": "2023-05-23T22:27:03.526737500Z"
-    }
+    "is_executing": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas pro výpočet určitého integrálu v čístem pythonu: 1.704184704925865 ms, při 1000 pokusech\n",
-      "Průměrný čas pro výpočet určitého integrálu pomocí numpy: 0.04555249586701393 ms, při 1000 pokusech\n"
+      "Průměrný čas pro výpočet určitého integrálu v 1000 pokusech čístem pythonu: 1.6869185999967158 ms\n",
+      "Průměrný čas pro výpočet určitého integrálu v 1000 pokusech pomocí numpy: 0.03948170000467144 ms\n"
      ]
     }
    ],
@@ -226,12 +217,12 @@
     "    a = sc.stats.uniform.rvs(loc=0, scale=1)\n",
     "    b = sc.stats.uniform.rvs(loc=0, scale=1)\n",
     "    start_time = timer()\n",
-    "    result1 = definite_integral_python(f, a, b)\n",
+    "    definite_integral_python(f, a, b)\n",
     "    end_time = timer()\n",
     "    times1.append(end_time - start_time)\n",
     "\n",
     "    start_time = timer()\n",
-    "    result2 = definite_integral_scipy(f, a, b)\n",
+    "    definite_integral_scipy(f, a, b)\n",
     "    end_time = timer()\n",
     "    times2.append(end_time - start_time)\n",
     "\n",
@@ -239,8 +230,8 @@
     "avg_time1 = sum(times1) / num_tries\n",
     "avg_time2 = sum(times2) / num_tries\n",
     "\n",
-    "print(f\"Průměrný čas pro výpočet určitého integrálu v čístem pythonu: {avg_time1 * 1000} ms, při {num_tries} pokusech\")\n",
-    "print(f\"Průměrný čas pro výpočet určitého integrálu pomocí numpy: {avg_time2 * 1000} ms, při {num_tries} pokusech\")"
+    "print(f\"Průměrný čas pro výpočet určitého integrálu v {num_tries} pokusech čístem pythonu: {avg_time1 * 1000} ms\")\n",
+    "print(f\"Průměrný čas pro výpočet určitého integrálu v {num_tries} pokusech pomocí numpy: {avg_time2 * 1000} ms\")"
    ]
   },
   {
@@ -254,44 +245,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T14:13:57.410371300Z",
-     "start_time": "2023-05-14T14:13:57.403520700Z"
+     "end_time": "2023-08-20T11:57:01.750831300Z",
+     "start_time": "2023-08-20T11:57:00.927412200Z"
     }
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'sympy' has no attribute 'derivative'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m x \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m     13\u001b[0m df_dx \u001b[39m=\u001b[39m derivative_python(f, x)\n\u001b[1;32m---> 14\u001b[0m df_dy \u001b[39m=\u001b[39m derivative_sympy(f, x) \n\u001b[0;32m     15\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDerivace funkce f(x) = x^2 v bodě x = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m pomocí čistého pythonu: \u001b[39m\u001b[39m{\u001b[39;00mdf_dx\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mDerivace funkce f(x) = x^2 v bodě x = \u001b[39m\u001b[39m{\u001b[39;00mx\u001b[39m}\u001b[39;00m\u001b[39m pomocí sympy: \u001b[39m\u001b[39m{\u001b[39;00mdf_dy\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[24], line 10\u001b[0m, in \u001b[0;36mderivative_sympy\u001b[1;34m(f, x)\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mderivative_sympy\u001b[39m(f, x):\n\u001b[1;32m---> 10\u001b[0m     \u001b[39mreturn\u001b[39;00m sp\u001b[39m.\u001b[39;49mderivative(f, x)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'sympy' has no attribute 'derivative'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Průměrný čas pro výpočet derivace v 1000 pokusech čistý python: 0.002294800001891417 ms\n",
+      "Průměrný čas pro výpočet derivace v 1000 pokusech sympy: 0.8372878999971363 ms\n"
      ]
     }
    ],
    "source": [
     "def f(x):\n",
-    "    return x**2\n",
+    "    return x**x\n",
     "\n",
     "# derivace pomocí čistého pythonu\n",
-    "def derivative_python(f, x, h=0.0001):\n",
+    "def derivative_python(f, x, h=0.000000001):\n",
     "    return (f(x + h) - f(x - h)) / (2 * h)\n",
     "\n",
     "# derivace pomocí sympy\n",
-    "def derivative_sympy(f, x):\n",
-    "    return derivative(f, x)\n",
+    "def derivative_sympy(f, x1):\n",
+    "    x = sp.Symbol('x')\n",
+    "    dx = sp.diff(f(x), x)\n",
+    "    ddx = sp.lambdify(x, dx)\n",
+    "    return ddx(x1)\n",
     "\n",
-    "x = 4\n",
-    "df_dx = derivative_python(f, x)\n",
-    "df_dy = derivative_sympy(f, x) \n",
-    "print(f\"Derivace funkce f(x) = x^2 v bodě x = {x} pomocí čistého pythonu: {df_dx}\")\n",
-    "print(f\"Derivace funkce f(x) = x^2 v bodě x = {x} pomocí sympy: {df_dy}\")"
+    "# Čas pro výpočet derivace pomocí čistého pythonu a pomocí sympy\n",
+    "num_tries = 1000\n",
+    "times1 = []\n",
+    "times2 = []\n",
+    "\n",
+    "for i in range(num_tries):\n",
+    "    x = np.random.randint(1, 10)\n",
+    "    start_time = timer()\n",
+    "    derivative_python(f, x)\n",
+    "    end_time = timer()\n",
+    "    times1.append(end_time - start_time)\n",
+    "\n",
+    "    start_time = timer()\n",
+    "    derivative_sympy(f, x)\n",
+    "    end_time = timer()\n",
+    "    times2.append(end_time - start_time)\n",
+    "    \n",
+    "avg_time1 = sum(times1) / num_tries\n",
+    "avg_time2 = sum(times2) / num_tries\n",
+    "\n",
+    "print(f\"Průměrný čas pro výpočet derivace v {num_tries} pokusech čistý python: {avg_time1 * 1000} ms\")\n",
+    "print(f\"Průměrný čas pro výpočet derivace v {num_tries} pokusech sympy: {avg_time2 * 1000} ms\")"
    ]
   },
   {
@@ -305,11 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-14T14:18:06.251073800Z",
-     "start_time": "2023-05-14T14:18:06.245021900Z"
+     "end_time": "2023-08-20T11:57:49.282824900Z",
+     "start_time": "2023-08-20T11:57:49.277818400Z"
     }
    },
    "outputs": [
@@ -317,8 +324,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Průměrný čas výpočtu faktoriálu v čístem pythonu: 0.06755590019747615 ms v 1000 pokusech\n",
-      "Průměrný čas výpočtu faktoriálu pomocí numpy: 0.012694800971075892 ms v 1000 pokusech\n"
+      "Průměrný čas výpočtu faktoriálu v čístem pythonu: 0.0679162999986147 ms v 1000 pokusech\n",
+      "Průměrný čas výpočtu faktoriálu pomocí numpy: 0.012810099994567281 ms v 1000 pokusech\n"
      ]
     }
    ],
@@ -371,11 +378,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -394,9 +417,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
