Added description for cells in visualization and some cosmetic changes

--- a/msw8/8.derivace_fce_jedne_promenne.ipynb
+++ b/msw8/8.derivace_fce_jedne_promenne.ipynb
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "a8de5702a61c2abe",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-25T11:09:26.238152100Z",
-     "start_time": "2023-08-25T11:09:26.213428400Z"
+     "end_time": "2023-08-25T13:40:35.235263300Z",
+     "start_time": "2023-08-25T13:40:35.212809400Z"
     }
    },
    "outputs": [
@@ -54,8 +54,7 @@
     "def numerical_derivative(f, x, h):\n",
     "    return (f(x + h) - f(x - h)) / (2*h)\n",
     "\n",
-    "def adaptive_derivative(f, x, h_initial, tol=1e-5, max_iterations=100):\n",
-    "    h = h_initial\n",
+    "def adaptive_derivative(f, x, h, tol=1e-5, max_iterations=100):\n",
     "    for _ in range(max_iterations):\n",
     "        df1 = numerical_derivative(f, x, h)\n",
     "        df2 = numerical_derivative(f, x, h/2)\n",
@@ -64,12 +63,12 @@
     "        h /= 2\n",
     "    return df2\n",
     "\n",
-    "# Test the adaptive derivative method\n",
-    "x_test = 3\n",
-    "h_initial = 0.1\n",
-    "static_step_result = numerical_derivative(function, x_test, h_initial)\n",
-    "adaptive_step_result = adaptive_derivative(function, x_test, h_initial)\n",
-    "analytical_result = analytical_derivative(x_test)\n",
+    "x = 3\n",
+    "h = 0.1\n",
+    "\n",
+    "static_step_result = numerical_derivative(function, x, h)\n",
+    "adaptive_step_result = adaptive_derivative(function, x, h)\n",
+    "analytical_result = analytical_derivative(x)\n",
     "\n",
     "print(f\"Výsledek numerické derivace s pevným krokem: {static_step_result}\")\n",
     "print(f\"Výsledek numerické derivace s adaptivním krokem: {adaptive_step_result}\")\n",
@@ -90,13 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "a21b296b56590765",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-25T11:09:26.251487600Z",
-     "start_time": "2023-08-25T11:09:26.218879500Z"
+     "end_time": "2023-08-25T13:40:35.244388800Z",
+     "start_time": "2023-08-25T13:40:35.224929Z"
     }
    },
    "outputs": [
@@ -119,12 +118,11 @@
     "def analytical_derivative_sin(x):\n",
     "    return np.cos(x)\n",
     "\n",
-    "# Test point\n",
-    "x_test_sin = np.pi/4\n",
+    "x_point_sin = np.pi/4\n",
     "\n",
-    "static_step_result_sin = numerical_derivative(function_sin, x_test_sin, h_initial)\n",
-    "adaptive_step_result_sin = adaptive_derivative(function_sin, x_test_sin, h_initial)\n",
-    "analytical_result_sin = analytical_derivative_sin(x_test_sin)\n",
+    "static_step_result_sin = numerical_derivative(function_sin, x_point_sin, h)\n",
+    "adaptive_step_result_sin = adaptive_derivative(function_sin, x_point_sin, h)\n",
+    "analytical_result_sin = analytical_derivative_sin(x_point_sin)\n",
     "\n",
     "print(f\"Výsledek numerické derivace s pevným krokem: {static_step_result_sin}\")\n",
     "print(f\"Výsledek numerické derivace s adaptivním krokem: {adaptive_step_result_sin}\")\n",
@@ -144,12 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1b693204-3df6-4874-85a2-9c8c7c3a6c1a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-25T11:09:26.252487800Z",
-     "start_time": "2023-08-25T11:09:26.227532400Z"
+     "end_time": "2023-08-25T13:40:35.258464200Z",
+     "start_time": "2023-08-25T13:40:35.227815500Z"
     }
    },
    "outputs": [
@@ -170,12 +168,11 @@
     "def analytical_derivative_exp(x):\n",
     "    return np.exp(x)\n",
     "\n",
-    "# Test point\n",
-    "x_test_exp = 1\n",
+    "x_point_exp = 1\n",
     "\n",
-    "static_step_result_exp = numerical_derivative(function_exp, x_test_exp, h_initial)\n",
-    "adaptive_step_result_exp = adaptive_derivative(function_exp, x_test_exp, h_initial)\n",
-    "analytical_result_exp = analytical_derivative_exp(x_test_exp)\n",
+    "static_step_result_exp = numerical_derivative(function_exp, x_point_exp, h)\n",
+    "adaptive_step_result_exp = adaptive_derivative(function_exp, x_point_exp, h)\n",
+    "analytical_result_exp = analytical_derivative_exp(x_point_exp)\n",
     "\n",
     "print(f\"Výsledek numerické derivace s pevným krokem: {static_step_result_exp}\")\n",
     "print(f\"Výsledek numerické derivace s adaptivním krokem: {adaptive_step_result_exp}\")\n",
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -213,11 +210,11 @@
     "    return 1/x\n",
     "\n",
     "# Test point\n",
-    "x_test_log = 2\n",
+    "x_point_log = 2\n",
     "\n",
-    "static_step_result_log = numerical_derivative(function_log, x_test_log, h_initial)\n",
-    "adaptive_step_result_log = adaptive_derivative(function_log, x_test_log, h_initial)\n",
-    "analytical_result_log = analytical_derivative_log(x_test_log)\n",
+    "static_step_result_log = numerical_derivative(function_log, x_point_log, h)\n",
+    "adaptive_step_result_log = adaptive_derivative(function_log, x_point_log, h)\n",
+    "analytical_result_log = analytical_derivative_log(x_point_log)\n",
     "\n",
     "print(f\"Výsledek numerické derivace s pevným krokem: {static_step_result_log}\")\n",
     "print(f\"Výsledek numerické derivace s adaptivním krokem: {adaptive_step_result_log}\")\n",
@@ -226,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-25T11:09:26.256488500Z",
-     "start_time": "2023-08-25T11:09:26.236148500Z"
+     "end_time": "2023-08-25T13:40:35.298087500Z",
+     "start_time": "2023-08-25T13:40:35.236262300Z"
     }
    },
    "id": "371efd46ec75ff50"
