--- a/msw2/2.vizualizace_dat.ipynb
+++ b/msw2/2.vizualizace_dat.ipynb
@@ -376,7 +376,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Průměrný vek matek v Kalifornii v letech 2016-2021"
+    "### Průměrný věk matek v Kalifornii v letech 2016-2021"
    ],
    "metadata": {
     "collapsed": false
@@ -414,7 +414,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Průměrný vek matek v Texasu v letech 2016-2021"
+    "### Průměrný věk matek v Texasu v letech 2016-2021"
    ],
    "metadata": {
     "collapsed": false
@@ -452,7 +452,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Průměrný vek matek v USA v letech 2016-2021"
+    "### Průměrný věk matek v USA v letech 2016-2021"
    ],
    "metadata": {
     "collapsed": false
@@ -525,7 +525,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Průměrná váha při narození (g) vs Průměrný věk matky (years)"
+    "### Průměrná váha při narození (g) vs Průměrný věk matky (years)"
    ],
    "metadata": {
     "collapsed": false
