--- a/msw7/7.monte_carlo.ipynb
+++ b/msw7/7.monte_carlo.ipynb
@@ -4,23 +4,17 @@
    "cell_type": "markdown",
    "id": "832ec671bb14343a",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
-    "# Monte Carlo"
+    "# 7. Monte Carlo"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "be473251fa957ae0",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "## Loterie\n",
@@ -36,10 +30,7 @@
      "end_time": "2023-08-23T11:29:28.611288500Z",
      "start_time": "2023-08-23T11:29:28.602022300Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -56,10 +47,7 @@
      "end_time": "2023-08-22T12:55:23.932547100Z",
      "start_time": "2023-08-22T12:12:13.997366800Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
