--- a/msw8/8.derivace_fce_jedne_promenne.ipynb
+++ b/msw8/8.derivace_fce_jedne_promenne.ipynb
@@ -7,7 +7,7 @@
     "collapsed": false
    },
    "source": [
-    "# Derivace funkce jedné proměnné\n",
+    "# 8. Derivace funkce jedné proměnné\n",
     "\n",
     "## Porovnání numerické derivace s pevným krokem, numerické derivace s adaptivním krokem a analytické derivace"
    ]
